@@ -56,3 +56,9 @@
     </style>
 </head>
 <!-- Start of the displayed HTML -->
+<body><center>HTTP Code 404 - You are probably lost... This is not a server-side error.
+<br>
+<p class="footer-text">©2025 GoobyDesk, a BlueBotPC platform. All rights reserved.</p>
+</center>
+</body>
+</html>
